<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="UselessParent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="left">

        <TextView
            android:layout_marginTop="2dp"
            android:id="@+id/tv_NameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|left"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/tv_PriceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|left"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_LastUpdateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="2dp"/>
    </LinearLayout>
</LinearLayout>